Fixed issue where some page data would overlap with menu. Added youtube video in contacts.

--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -2,6 +2,7 @@
   background-color: $dark-grey;
   color: $white-color;
   padding: 4.8rem 0;
+  height: 30vh;
 
   @include respond(phone) {
     border: 0px;
