--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -25,7 +25,7 @@
     width: 100%;
     margin: auto;
     padding-left: 2rem;
-    padding-right: 5rem;
+    padding-right: 10rem;
 
     @include respond(phone) {
       margin-bottom: 0;
@@ -82,7 +82,7 @@
       "text text"
       "icons icons"
       "buttons buttons";
-    max-width: 400px;
+    max-width: 80%;
   }
 
 }
